Update solution.java